# pipeline-example

./: .gitignore  README.md  loan_calculator.py  pyproject.toml  requirements.txt  test_loan_calculator.py
.github/workflows/: python_ci.yml
